--- a/views/index.templ
+++ b/views/index.templ
@@ -21,6 +21,9 @@ templ Home(amount string, searchOn bool, addNew bool) {
 	@template() {
 		<div class="flex flex-col justify-center items-center">
 			<h1 class="text-2xl py-5 text-center">Welcome to Search Setting</h1>
+			<div class="py-5">
+				<button hx-post="/logout" class="btn">Logout</button>
+			</div>
 			<form
 				class="flex flex-col justify-center items-center gap-5 py-5"
 				hx-post="/"
